--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ configurations {
 
 dependencies {
 	compile('javax.servlet:jstl:1.2')
+	compile group: 'org.primefaces', name: 'primefaces', version: '5.0'
 		
 	compile('org.springframework.boot:spring-boot-starter-jersey')
 	compile('org.springframework.boot:spring-boot-starter-web')
